2013-03-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dispnew.c (bitch_at_user): Use `user-error'.

2013-03-17  Ken Brown  <kbrown@cornell.edu>

	* dispextern.h (RGB_PIXEL_COLOR): Move here from image.c.  Use it
	as return type of image_background.  (Bug#13981)
	* image.c (RGB_PIXEL_COLOR): Move to dispextern.h.

2013-03-16  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (updateFrameSize:): Change resize increments if needed.
	(ns_select): Don't return with result uninitialized.

	* nsterm.h (EmacsSavePanel, EmacsOpenPanel): Add getFilename
	and getDirectory.

	* nsfns.m (ns_filename_from_panel, ns_directory_from_panel):
	New functions.
	(Fns_read_file_name): ret is BOOL.  If ! dir_only_p, don't choose
	directories.  If filename is nil, get directory name (Bug#13932).
	Use getFilename and getDirectory.
	(getFilename, getDirectory): New methods for EmacsSavePanel and
	EmacsOpenPanel.
	(ok:): In EmacsOpenPanel, if we can't choose directories, just return.

2013-03-15  Paul Eggert  <eggert@cs.ucla.edu>

	* coding.c (decode_coding_gap): Fix typo caught by static checking.

2013-03-15  handa  <handa@gnu.org>

	* insdel.c (insert_from_gap): New arg text_at_gap_tail.
	(adjust_after_replace): Make it back to static.  Delete the third
	arg text_at_gap_tail.  Cancel the code for handling it.

	* coding.h (struct coding_system): New member eol_seen.

	* coding.c (detect_ascii): New function.
	(detect_coding): Set coding->head_ascii and coding->eol_seen only
	when the source bytes are actually scanned.  On detecting for
	coding_category_utf_8_auto, call detect_ascii instead of scanning
	source bytes directly.
	(produce_chars): Call insert_from_gap with the new arg 0.
	(encode_coding): Likewise.
	(decode_coding_gap): Control ASCII optimization by the variable
	disable_ascii_optimization instead of #ifndef .. #endif.
	Deccode EOL format according to coding->eol_seen.
	(syms_of_coding): Declare disable-ascii-optimization as a Lisp
	variable.
